@@ -502,9 +502,8 @@ public class CacheBuilderTest extends TestCase {
     computationShouldWait.set(true);
 
     final AtomicInteger computedCount = new AtomicInteger();
-    // Refactoring this causes test to hang for a while and eventually give wrong result
-    // https://github.com/ponder-lab/guava/actions/runs/9736322153/job/26866789783#step:6:328
-    ExecutorService threadPool = Executors.newFixedThreadPool(nThreads);
+    
+    ExecutorService threadPool = Executors.newVirtualThreadPerTaskExecutor();
     final CountDownLatch tasksFinished = new CountDownLatch(nTasks);
     for (int i = 0; i < nTasks; i++) {
       final String s = "a" + i;
@@ -601,8 +600,9 @@ public class CacheBuilderTest extends TestCase {
             .removalListener(removalListener)
             .maximumSize(5000)
             .build(countingIdentityLoader);
-
-    ExecutorService threadPool = Executors.newVirtualThreadPerTaskExecutor();
+    // Refactoring this causes test to hang for a while and eventually give wrong result
+    // https://github.com/ponder-lab/guava/actions/runs/9736322153/job/26866789783#step:6:328
+    ExecutorService threadPool = Executors.newFixedThreadPool(nThreads);
     for (int i = 0; i < nTasks; i++) {
       @SuppressWarnings("unused") // https://errorprone.info/bugpattern/FutureReturnValueIgnored
       Future<?> possiblyIgnoredError =
